fix: complete ExternalAuth filter OpenAPI DTO
