# paas-mediation-service/docs/swagger.json
@@ -2323,6 +2323,14 @@
                 }
             }
         },
+        "v2.ForwardBodyConfig": {
+            "type": "object",
+            "properties": {
+                "maxSize": {
+                    "type": "integer"
+                }
+            }
+        },
         "v2.Fraction": {
             "type": "object",
             "properties": {
@@ -2331,6 +2339,37 @@
                 },
                 "numerator": {
                     "type": "integer"
+                }
+            }
+        },
+        "v2.GRPCAuthConfig": {
+            "type": "object",
+            "properties": {
+                "allowedHeaders": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "v2.HTTPAuthConfig": {
+            "type": "object",
+            "properties": {
+                "allowedHeaders": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "allowedResponseHeaders": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "path": {
+                    "type": "string"
                 }
             }
         },
@@ -2374,6 +2413,15 @@
             "properties": {
                 "backendRef": {
                     "$ref": "#/definitions/v2.BackendObjectReference"
+                },
+                "forwardBody": {
+                    "$ref": "#/definitions/v2.ForwardBodyConfig"
+                },
+                "grpc": {
+                    "$ref": "#/definitions/v2.GRPCAuthConfig"
+                },
+                "http": {
+                    "$ref": "#/definitions/v2.HTTPAuthConfig"
                 },
                 "protocol": {
                     "type": "string",
